# AgenticAI_Decisioning_Platform

./: .env.example  .gitignore  AGENTIC_AI_FRAMEWORK.md  AGENTIC_AI_REFERENCE_GUIDE.md  AGENTS_AND_ENHANCEMENTS.md  BUSINESS_SERVICES_AND_RULES.md  CLAUDE.md  HOW_AGENTIC_AI_CONCEPTS_ARE_USED.md  HOW_ONBOARDING_SERVICE_USES_AGENT.md  HOW_TO_TEST_NETWORK_ANALYSIS.md  ID_VERIFICATION_DATA_FLOW.md  ONBOARDING_AGENT_INTEGRATION.md  PLATFORM_OVERVIEW.md  PROJECT_OVERVIEW.md  QUICK_TEST_NETWORK.md  REAL_OCR_INTEGRATION.md  TEST_NETWORK_ANALYSIS.md  TOOL_INTEGRATION_STATUS.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js  zep-config.yaml
.github/workflows/: test.yml
backend/: .c8rc.json  .gitignore  package-lock.json  package.json
backend/agents/: index.js
backend/evaluation/: .env.example  config.py  main.py  pyproject.toml
backend/evaluation/models/: schemas.py
backend/evaluation/routers/: braintrust.py  dashboard.py  evaluate.py  ingest.py  letta_memory.py  memory.py  phoenix.py  retrieval_eval.py  search.py  vector_search.py
backend/evaluation/seed/: seed_pinecone.py
backend/evaluation/services/: braintrust_service.py  chromadb_service.py  deepeval_evaluator.py  letta_service.py  mem0_service.py  phoenix_service.py  pinecone_service.py  qdrant_service.py  query_decomposer.py  ragas_evaluator.py  trulens_evaluator.py  weaviate_service.py
backend/gateway/: server.js
backend/graph/: graph-engine.js  graph-factory.js  graph-queries.js  neo4j-client.js  neo4j-queries.js  relationship-builder.js
backend/mcp/: claude-code-config.json  server.js
backend/streaming/: feature-store.js  stream-engine.js  (+1 more)
docs/: ONBOARDING_AGENT_DECISION_FLOW.md  PLATFORM_METRICS_FRAMEWORK.md  RISK_DECISION_RULES_REPOSITORY.md
scripts/: setup-ollama.sh  test-full-platform.sh
src/: App.jsx  index.css
(+384 files in other folders)
